# Lessons

./: README.md  lesson1_1.py  lesson1_2.py  lesson1_3.py  main.py
Lab11/: Lab11.py
Lab12/: lesson12_1.py  lesson12_2.py  lesson12_3.py
Lab13/: lab_13.py
Lab16/: main.py
Lab16/models/: account.py  operations.py
Lab18/: db.py  main.py  pyproject.toml
Lab18-poetry/: main.py  pyproject.toml
Lab18-poetry/models/: orders.py  products.py  tickets.py  users.py
Lab18/application/db/: base.py
Lab18/models/: products.py  users.py
Lab2/: lesson2_1_1.py  lesson2_1_2.py  lesson2_2.py  lesson2_3.py  lesson2_4.py  lesson2_5.py
Lab3/: lesson3_1.py  lesson3_2.py  lesson3_3.py
Lab5/: lesson5_1.py  lesson5_2.py
Lab6/: lesson6_1.py  lesson6_2.py  lesson6_3.py  lesson6_4.py  lesson6_5  lesson6_5.py
Lab7/: lesson_7.py
Lab8/: data.json  lesson8_1.py  lesson8_2.py  lesson8_3.py  strings.txt  users.csv
Lab9/: lesson9_1.py  lesson9_2.py  lesson9_3.py
lab4/: lesson4_1.py  lesson4_2.py  lesson4_3.py  lesson4_4.py
