[tool.poetry]
name = "lab18-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lab18_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.12"
sqlalchemy-orm = "^1.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
